2008-03-23	Guido Diepen	<guido@guidodiepen.nl>

	* Major rewrite into two separate components, one GUI component and one
	  dataserver component. These both run in their own separate proces,
	  meaning we don't have any problems with the threading within python
	  anymore.
	* Added support for listening to Status events generated when ActiveSync
	  process is going on. Currently it only shows an animated icon when
	  sync to sync-engine is in progress (NB does not have to be sync with
	  opensync!)
	* Added support for only starting the application once
	* Added support for starting the application in system-tray
	* Added support for starting the dataserver only (useful for later with
   	  d-busactivation)

2008-01-28	Guido Diepen	<guido@guidodiepen.nl>

	* Minor update in setup.py for correct handling of icons with packaging.

2008-01-23	Guido Diepen	<guido@guidodiepen.nl>

	* Working setup.py, no more problems with icons

2008-01-22	Guido Diepen	<guido@guidodiepen.nl>

	* Converted the directory structure for easy packaging
	* Created setup.py for distutils

2008-01-20	Guido Diepen	<guido@guidodiepen.nl>

	* Rewrote code to make use of locking for access to librapi2
	* Added window to show progress of CAB file copying (This needs
	  latest SVN librapi, for non-blocking CeWriteFile)

2008-01-19	Guido Diepen	<guido@guidodiepen.nl>

	* Some minor bugfixes in code
	* Some minor changes in GUI desgin
	* Added support for displaying partnerships 
	* Added support for removing partnerships
	* Added support for creating partnerships


2008-01-08	Guido Diepen	<guido@guidodiepen.nl>

	* Minor bugfix, add quotes around path and files to 
	  cope with spaces within them

2008-01-08	Guido Diepen	<guido@guidodiepen.nl>

	* Implemented Minimize-to-tray. Application must be quit
	  through Quit button, not through closing window
	* Implemented About dialog
	* Implemented handling of locked WM5 devices
	* Implemented handling of locked WM6 devices